--- a/model.ipynb
+++ b/model.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "bd6b11d2-6d71-4090-b8ce-c34f090f04e5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Must provide an even number of non-keyword arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[63], line 34\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Pandas Display Settings\u001b[39;00m\n\u001b[0;32m     33\u001b[0m pd\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisplay.max_columns\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m---> 34\u001b[0m pd\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisplay.max_rows\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_config\\config.py:274\u001b[0m, in \u001b[0;36mCallableDynamicDoc.__call__\u001b[1;34m(self, *args, **kwds)\u001b[0m\n\u001b[0;32m    273\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T:\n\u001b[1;32m--> 274\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__func__\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_config\\config.py:157\u001b[0m, in \u001b[0;36m_set_option\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    155\u001b[0m nargs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(args)\n\u001b[0;32m    156\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nargs \u001b[38;5;129;01mor\u001b[39;00m nargs \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m--> 157\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMust provide an even number of non-keyword arguments\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    159\u001b[0m \u001b[38;5;66;03m# default to false\u001b[39;00m\n\u001b[0;32m    160\u001b[0m silent \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msilent\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mValueError\u001b[0m: Must provide an even number of non-keyword arguments"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard Libraries\n",
     "import warnings\n",
@@ -54,12 +40,18 @@
     "\n",
     "# Pandas Display Settings\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows')"
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.width', None)\n",
+    "pd.set_option('display.float_format', lambda x: '%.3f' % x)\n",
+    "\n",
+    "# Warning Configurations\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "warnings.simplefilter(\"ignore\", category=ConvergenceWarning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "20cd8e50-ca52-404c-922b-11e176e2b464",
    "metadata": {},
    "outputs": [],
@@ -69,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "73770ea4-9532-4c7b-a340-54c90fcd382e",
    "metadata": {},
    "outputs": [
@@ -136,8 +128,8 @@
        "      <td>E</td>\n",
        "      <td>446.000</td>\n",
        "      <td>33.000</td>\n",
-       "      <td>20</td>\n",
-       "      <td>228.519</td>\n",
+       "      <td>20.000</td>\n",
+       "      <td>152.838</td>\n",
        "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -159,7 +151,7 @@
        "      <td>W</td>\n",
        "      <td>632.000</td>\n",
        "      <td>43.000</td>\n",
-       "      <td>10</td>\n",
+       "      <td>10.000</td>\n",
        "      <td>475.000</td>\n",
        "      <td>N</td>\n",
        "    </tr>\n",
@@ -180,9 +172,9 @@
        "      <td>263.000</td>\n",
        "      <td>A</td>\n",
        "      <td>W</td>\n",
-       "      <td>765.100</td>\n",
+       "      <td>880.000</td>\n",
        "      <td>82.000</td>\n",
-       "      <td>14</td>\n",
+       "      <td>14.000</td>\n",
        "      <td>480.000</td>\n",
        "      <td>A</td>\n",
        "    </tr>\n",
@@ -205,7 +197,7 @@
        "      <td>E</td>\n",
        "      <td>200.000</td>\n",
        "      <td>11.000</td>\n",
-       "      <td>3</td>\n",
+       "      <td>3.000</td>\n",
        "      <td>500.000</td>\n",
        "      <td>N</td>\n",
        "    </tr>\n",
@@ -226,9 +218,9 @@
        "      <td>33.000</td>\n",
        "      <td>N</td>\n",
        "      <td>E</td>\n",
-       "      <td>765.100</td>\n",
+       "      <td>805.000</td>\n",
        "      <td>40.000</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.000</td>\n",
        "      <td>91.500</td>\n",
        "      <td>N</td>\n",
        "    </tr>\n",
@@ -245,21 +237,21 @@
        "4 321.000  87.000 10.000 39.000 42.000 30.000  2.000  396.000  101.000   \n",
        "\n",
        "   CHmRun   CRuns    CRBI  CWalks League Division  PutOuts  Assists  Errors  \\\n",
-       "0   1.000  30.000  29.000  14.000      A        E  446.000   33.000      20   \n",
-       "1  69.000 321.000 414.000 375.000      N        W  632.000   43.000      10   \n",
-       "2  63.000 224.000 266.000 263.000      A        W  765.100   82.000      14   \n",
-       "3 225.000 828.000 838.000 354.000      N        E  200.000   11.000       3   \n",
-       "4  12.000  48.000  46.000  33.000      N        E  765.100   40.000       4   \n",
+       "0   1.000  30.000  29.000  14.000      A        E  446.000   33.000  20.000   \n",
+       "1  69.000 321.000 414.000 375.000      N        W  632.000   43.000  10.000   \n",
+       "2  63.000 224.000 266.000 263.000      A        W  880.000   82.000  14.000   \n",
+       "3 225.000 828.000 838.000 354.000      N        E  200.000   11.000   3.000   \n",
+       "4  12.000  48.000  46.000  33.000      N        E  805.000   40.000   4.000   \n",
        "\n",
        "   Salary NewLeague  \n",
-       "0 228.519         A  \n",
+       "0 152.838         A  \n",
        "1 475.000         N  \n",
        "2 480.000         A  \n",
        "3 500.000         N  \n",
        "4  91.500         N  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "id": "c2bac1f1-8558-495f-96db-912c16a50146",
    "metadata": {},
    "outputs": [
@@ -283,7 +275,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "id": "663ff229-104d-47ca-bdd7-e9acbf11f7b8",
    "metadata": {},
    "outputs": [
@@ -324,10 +316,10 @@
       " 14  Division   322 non-null    object \n",
       " 15  PutOuts    322 non-null    float64\n",
       " 16  Assists    322 non-null    float64\n",
-      " 17  Errors     322 non-null    int64  \n",
+      " 17  Errors     322 non-null    float64\n",
       " 18  Salary     322 non-null    float64\n",
       " 19  NewLeague  322 non-null    object \n",
-      "dtypes: float64(16), int64(1), object(3)\n",
+      "dtypes: float64(17), object(3)\n",
       "memory usage: 50.4+ KB\n"
      ]
     }
@@ -338,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "0daeba03-ed09-4da8-be16-db4e8212f3b4",
    "metadata": {},
    "outputs": [],
@@ -349,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "id": "b9e4a7fd-6a7a-4507-8e71-4b909b4bd89b",
    "metadata": {},
    "outputs": [],
@@ -360,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "id": "ec23cba6-e3ae-4076-826e-7aef81c06c0e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "id": "54ef9ce3-ec77-4a44-8c6d-addd30b1d66e",
    "metadata": {},
    "outputs": [],
@@ -399,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "id": "406514f9-403c-4aed-a684-acecd70f3706",
    "metadata": {},
    "outputs": [
@@ -407,34 +399,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR         | RMSE: 288.91 ± 46.32\n",
-      "Ridge      | RMSE: 290.23 ± 49.63\n",
-      "Lasso      | RMSE: 290.21 ± 50.21\n",
-      "ElasticNet | RMSE: 303.64 ± 62.59\n",
-      "KNN        | RMSE: 315.53 ± 51.13\n",
-      "CART       | RMSE: 373.59 ± 71.29\n",
-      "RF         | RMSE: 280.40 ± 52.92\n",
-      "GBM        | RMSE: 282.41 ± 59.61\n",
-      "XGBoost    | RMSE: 303.80 ± 58.06\n",
-      "LightGBM   | RMSE: 272.88 ± 59.25\n",
+      "LR         | RMSE: 296.63 ± 49.16\n",
+      "Ridge      | RMSE: 295.29 ± 51.88\n",
+      "Lasso      | RMSE: 295.33 ± 52.14\n",
+      "ElasticNet | RMSE: 305.85 ± 63.98\n",
+      "KNN        | RMSE: 303.94 ± 50.01\n",
+      "CART       | RMSE: 385.63 ± 39.40\n",
+      "RF         | RMSE: 276.54 ± 50.76\n",
+      "GBM        | RMSE: 275.76 ± 53.02\n",
+      "XGBoost    | RMSE: 305.79 ± 46.56\n",
+      "LightGBM   | RMSE: 264.06 ± 58.14\n",
       "\n",
       "Model Performans Karşılaştırması:\n",
       "        Model    RMSE    Std\n",
-      "9    LightGBM 272.884 59.255\n",
-      "6          RF 280.401 52.920\n",
-      "7         GBM 282.415 59.614\n",
-      "0          LR 288.907 46.320\n",
-      "2       Lasso 290.208 50.207\n",
-      "1       Ridge 290.225 49.625\n",
-      "3  ElasticNet 303.645 62.589\n",
-      "8     XGBoost 303.797 58.061\n",
-      "4         KNN 315.526 51.132\n",
-      "5        CART 373.585 71.290\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000085 seconds.\n",
+      "9    LightGBM 264.059 58.140\n",
+      "7         GBM 275.762 53.025\n",
+      "6          RF 276.538 50.763\n",
+      "1       Ridge 295.292 51.881\n",
+      "2       Lasso 295.332 52.143\n",
+      "0          LR 296.630 49.157\n",
+      "4         KNN 303.937 50.010\n",
+      "8     XGBoost 305.786 46.559\n",
+      "3  ElasticNet 305.850 63.983\n",
+      "5        CART 385.627 39.403\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000122 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 1218\n",
+      "[LightGBM] [Info] Total Bins 1236\n",
       "[LightGBM] [Info] Number of data points in the train set: 322, number of used features: 22\n",
-      "[LightGBM] [Info] Start training from score 516.302920\n",
+      "[LightGBM] [Info] Start training from score 516.772756\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
@@ -585,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "8652325b-bf30-420c-9267-e8eae8860a3d",
    "metadata": {},
    "outputs": [
@@ -596,10 +588,10 @@
       "╔══════════════════════════╗\n",
       "║   MODEL PERFORMANSI      ║\n",
       "╠══════════════╦═══════════╣\n",
-      "║ RMSE         ║ 343.39  ║\n",
-      "║ MSE          ║ 117918.82 ║\n",
-      "║ MAE          ║ 263.91  ║\n",
-      "║ R² Score     ║ 0.5960  ║\n",
+      "║ RMSE         ║ 362.53  ║\n",
+      "║ MSE          ║ 131429.45 ║\n",
+      "║ MAE          ║ 273.01  ║\n",
+      "║ R² Score     ║ 0.5490  ║\n",
       "╚══════════════╩═══════════╝\n"
      ]
     }
@@ -643,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "id": "8aa9d3cb-22a1-40b3-b16f-78e1b2ff8235",
    "metadata": {},
    "outputs": [
@@ -654,19 +646,19 @@
       "\n",
       "En Önemli 5 Pozitif Etki:\n",
       "    Feature  Coefficient\n",
-      "8     CHits      901.208\n",
-      "9    CHmRun      228.044\n",
-      "1      Hits      183.166\n",
-      "5     Walks      111.217\n",
-      "14  Assists       69.866\n",
+      "8     CHits      768.041\n",
+      "1      Hits      216.140\n",
+      "9    CHmRun      214.576\n",
+      "5     Walks      152.458\n",
+      "14  Assists       71.176\n",
       "\n",
       "En Önemli 5 Negatif Etki:\n",
-      "       Feature  Coefficient\n",
-      "3         Runs      -54.120\n",
-      "19  Division_W      -57.562\n",
-      "11        CRBI     -103.316\n",
-      "0        AtBat     -159.517\n",
-      "7       CAtBat     -713.595\n"
+      "   Feature  Coefficient\n",
+      "3     Runs      -74.306\n",
+      "11    CRBI      -91.877\n",
+      "12  CWalks     -167.277\n",
+      "0    AtBat     -194.351\n",
+      "7   CAtBat     -525.645\n"
      ]
     }
    ],
