--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "bd6b11d2-6d71-4090-b8ce-c34f090f04e5",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "20cd8e50-ca52-404c-922b-11e176e2b464",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "73770ea4-9532-4c7b-a340-54c90fcd382e",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "      <td>446.000</td>\n",
        "      <td>33.000</td>\n",
        "      <td>20.000</td>\n",
-       "      <td>152.838</td>\n",
+       "      <td>74.315</td>\n",
        "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -244,14 +244,14 @@
        "4  12.000  48.000  46.000  33.000      N        E  805.000   40.000   4.000   \n",
        "\n",
        "   Salary NewLeague  \n",
-       "0 152.838         A  \n",
+       "0  74.315         A  \n",
        "1 475.000         N  \n",
        "2 480.000         A  \n",
        "3 500.000         N  \n",
        "4  91.500         N  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "c2bac1f1-8558-495f-96db-912c16a50146",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "663ff229-104d-47ca-bdd7-e9acbf11f7b8",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "0daeba03-ed09-4da8-be16-db4e8212f3b4",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "b9e4a7fd-6a7a-4507-8e71-4b909b4bd89b",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "ec23cba6-e3ae-4076-826e-7aef81c06c0e",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "54ef9ce3-ec77-4a44-8c6d-addd30b1d66e",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "406514f9-403c-4aed-a684-acecd70f3706",
    "metadata": {},
    "outputs": [
@@ -399,136 +399,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR         | RMSE: 296.63 ± 49.16\n",
-      "Ridge      | RMSE: 295.29 ± 51.88\n",
-      "Lasso      | RMSE: 295.33 ± 52.14\n",
-      "ElasticNet | RMSE: 305.85 ± 63.98\n",
-      "KNN        | RMSE: 303.94 ± 50.01\n",
-      "CART       | RMSE: 385.63 ± 39.40\n",
-      "RF         | RMSE: 276.54 ± 50.76\n",
-      "GBM        | RMSE: 275.76 ± 53.02\n",
-      "XGBoost    | RMSE: 305.79 ± 46.56\n",
-      "LightGBM   | RMSE: 264.06 ± 58.14\n",
+      "LR         | RMSE: 310.69 ± 44.38\n",
+      "Ridge      | RMSE: 308.14 ± 47.29\n",
+      "Lasso      | RMSE: 307.34 ± 47.64\n",
+      "ElasticNet | RMSE: 314.83 ± 60.52\n",
+      "KNN        | RMSE: 305.63 ± 44.19\n",
+      "CART       | RMSE: 342.41 ± 74.89\n",
+      "RF         | RMSE: 256.36 ± 50.24\n",
+      "GBM        | RMSE: 253.78 ± 46.65\n",
+      "XGBoost    | RMSE: 290.51 ± 31.87\n",
+      "LightGBM   | RMSE: 258.36 ± 51.92\n",
       "\n",
       "Model Performans Karşılaştırması:\n",
       "        Model    RMSE    Std\n",
-      "9    LightGBM 264.059 58.140\n",
-      "7         GBM 275.762 53.025\n",
-      "6          RF 276.538 50.763\n",
-      "1       Ridge 295.292 51.881\n",
-      "2       Lasso 295.332 52.143\n",
-      "0          LR 296.630 49.157\n",
-      "4         KNN 303.937 50.010\n",
-      "8     XGBoost 305.786 46.559\n",
-      "3  ElasticNet 305.850 63.983\n",
-      "5        CART 385.627 39.403\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000122 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 1236\n",
-      "[LightGBM] [Info] Number of data points in the train set: 322, number of used features: 22\n",
-      "[LightGBM] [Info] Start training from score 516.772756\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "7         GBM 253.781 46.654\n",
+      "6          RF 256.357 50.243\n",
+      "9    LightGBM 258.361 51.925\n",
+      "8     XGBoost 290.510 31.872\n",
+      "4         KNN 305.628 44.191\n",
+      "2       Lasso 307.336 47.639\n",
+      "1       Ridge 308.143 47.291\n",
+      "0          LR 310.694 44.377\n",
+      "3  ElasticNet 314.827 60.523\n",
+      "5        CART 342.405 74.888\n",
       "\n",
-      "En iyi model: LightGBM - Tüm veriyle eğitildi.\n"
+      "En iyi model: GBM - Tüm veriyle eğitildi.\n"
      ]
     }
    ],
@@ -577,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "8652325b-bf30-420c-9267-e8eae8860a3d",
    "metadata": {},
    "outputs": [
@@ -588,10 +483,10 @@
       "╔══════════════════════════╗\n",
       "║   MODEL PERFORMANSI      ║\n",
       "╠══════════════╦═══════════╣\n",
-      "║ RMSE         ║ 362.53  ║\n",
-      "║ MSE          ║ 131429.45 ║\n",
-      "║ MAE          ║ 273.01  ║\n",
-      "║ R² Score     ║ 0.5490  ║\n",
+      "║ RMSE         ║ 368.07  ║\n",
+      "║ MSE          ║ 135477.76 ║\n",
+      "║ MAE          ║ 282.49  ║\n",
+      "║ R² Score     ║ 0.5363  ║\n",
       "╚══════════════╩═══════════╝\n"
      ]
     }
@@ -635,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "id": "8aa9d3cb-22a1-40b3-b16f-78e1b2ff8235",
    "metadata": {},
    "outputs": [
@@ -646,19 +541,19 @@
       "\n",
       "En Önemli 5 Pozitif Etki:\n",
       "    Feature  Coefficient\n",
-      "8     CHits      768.041\n",
-      "1      Hits      216.140\n",
-      "9    CHmRun      214.576\n",
-      "5     Walks      152.458\n",
-      "14  Assists       71.176\n",
+      "8     CHits      489.773\n",
+      "1      Hits      219.195\n",
+      "9    CHmRun      184.797\n",
+      "5     Walks      149.670\n",
+      "14  Assists       70.956\n",
       "\n",
       "En Önemli 5 Negatif Etki:\n",
       "   Feature  Coefficient\n",
-      "3     Runs      -74.306\n",
-      "11    CRBI      -91.877\n",
-      "12  CWalks     -167.277\n",
-      "0    AtBat     -194.351\n",
-      "7   CAtBat     -525.645\n"
+      "3     Runs      -49.805\n",
+      "11    CRBI     -143.420\n",
+      "12  CWalks     -169.756\n",
+      "7   CAtBat     -202.300\n",
+      "0    AtBat     -244.602\n"
      ]
     }
    ],
@@ -684,6 +579,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7167cc77-28e9-4fd6-9f24-4c2d4b09e351",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37194d1-8bb4-4abb-911e-385693f33edc",
    "metadata": {},
    "outputs": [],
    "source": []
