--- a/data prep.ipynb
+++ b/data prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 167,
    "id": "1819abdb-bdd6-4a54-a7e7-f8cfceb4db63",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 168,
    "id": "161c37e2-2bed-4a09-b51f-ba145f8d9c48",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 169,
    "id": "ca54e87d-bfff-499f-86ab-71b05181b81d",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "4    46      33      N        E      805       40       4   91.50         N  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 170,
    "id": "9adf290c-af6b-4e35-aecd-fdb756cbf33a",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 171,
    "id": "e554fd2b-f3dd-4a58-b59e-39bb21608f10",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 172,
    "id": "7cf31059-8edb-4145-bca2-56261ccb7dee",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 173,
    "id": "3e7dfae7-6b8b-42e4-9a7f-79af595debc3",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 174,
    "id": "403b99a2-8034-4f1a-aeb6-990a99336925",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "(322, 20)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 175,
    "id": "fdaf05ba-71ed-4e0c-892c-4557c0e080a0",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 176,
    "id": "ca2e463c-17e6-4e32-a067-2a7631445792",
    "metadata": {
     "scrolled": true
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 177,
    "id": "67843d79-82ab-4663-8a51-e000096e8221",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 178,
    "id": "bbd06c5d-ee1b-47c4-a7e6-bca9ffaf38d2",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 179,
    "id": "3a6774cb-b0a8-4506-879e-2f3547440e6d",
    "metadata": {},
    "outputs": [],
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 180,
    "id": "ae1589af-180c-4e1e-af8a-09a30fa97514",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 181,
    "id": "2f11f75e-3694-4305-a9fa-a1a37ff1e424",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 182,
    "id": "8d5ab1bb-2658-407e-90e8-cafc950d7b93",
    "metadata": {},
    "outputs": [
@@ -766,74 +766,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "2f897493-ee1d-4a2b-a1b5-d725260b261d",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 183,
+   "id": "c5dca25c-c476-4558-be47-4a70ede35c8d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 322 entries, 0 to 321\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   AtBat      322 non-null    float64\n",
+      " 1   Hits       322 non-null    float64\n",
+      " 2   HmRun      322 non-null    float64\n",
+      " 3   Runs       322 non-null    float64\n",
+      " 4   RBI        322 non-null    float64\n",
+      " 5   Walks      322 non-null    float64\n",
+      " 6   Years      322 non-null    float64\n",
+      " 7   CAtBat     322 non-null    float64\n",
+      " 8   CHits      322 non-null    float64\n",
+      " 9   CHmRun     322 non-null    float64\n",
+      " 10  CRuns      322 non-null    float64\n",
+      " 11  CRBI       322 non-null    float64\n",
+      " 12  CWalks     322 non-null    float64\n",
+      " 13  League     322 non-null    object \n",
+      " 14  Division   322 non-null    object \n",
+      " 15  PutOuts    322 non-null    float64\n",
+      " 16  Assists    322 non-null    float64\n",
+      " 17  Errors     322 non-null    float64\n",
+      " 18  Salary     263 non-null    float64\n",
+      " 19  NewLeague  322 non-null    object \n",
+      "dtypes: float64(17), object(3)\n",
+      "memory usage: 50.4+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "train_data = df[df['Salary'].notnull()]\n",
-    "test_data = df[df['Salary'].isnull()]\n"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "d8e51bc8-32d1-4048-8b94-fb83353deb84",
+   "execution_count": 184,
+   "id": "15a56f64-4d53-4762-9110-bd7199969196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score: 0.4646\n",
+      "RMSE: 311.1751\n",
+      "\n",
+      "Eksik Salary değerleri başarıyla tahmin edilip DataFrame'e yazıldı.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tunce\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Sayısal özellikleri alalım (örnek)\n",
-    "features = train_data.drop(['Salary'], axis=1)\n",
+    "df_salary = df[df['Salary'].notnull()].copy()\n",
     "\n",
-    "# Kategorik değişkenleri one-hot encoding ile dönüştür (varsa)\n",
-    "features = pd.get_dummies(features, drop_first=True)\n",
+    "# Özellikler ve hedef\n",
+    "X = df_salary.drop(columns=['Salary'])\n",
+    "y = df_salary['Salary']\n",
     "\n",
-    "# Hedef değişken\n",
-    "target = train_data['Salary']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "43ad2207-ed7b-4cee-84cc-c9c5021393c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_features = test_data.drop(['Salary'], axis=1)\n",
-    "test_features = pd.get_dummies(test_features, drop_first=True)\n",
+    "# Kategorik ve sayısal sütunlar\n",
+    "cat_cols = ['League', 'Division', 'NewLeague']\n",
+    "num_cols = [col for col in X.columns if col not in cat_cols]\n",
     "\n",
-    "# Eksik olan sütunları eşitle (train ve test setinde farklı kolonlar varsa)\n",
-    "test_features = test_features.reindex(columns=features.columns, fill_value=0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "6a015e89-242d-435c-bf30-53526c325e4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr_model = LinearRegression()\n",
-    "lr_model.fit(features, target)\n",
+    "# Eğitim/test böl\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Eksik olan salary değerlerini tahmin et\n",
-    "predicted_salaries = lr_model.predict(test_features)\n"
+    "# Pipeline oluştur\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    ('num', StandardScaler(), num_cols),\n",
+    "    ('cat', OneHotEncoder(handle_unknown='ignore'), cat_cols)\n",
+    "])\n",
+    "\n",
+    "model = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))\n",
+    "])\n",
+    "\n",
+    "# Eğit\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Performans kontrol\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(f\"R2 Score: {r2_score(y_test, y_pred):.4f}\")\n",
+    "print(f\"RMSE: {mean_squared_error(y_test, y_pred, squared=False):.4f}\")\n",
+    "\n",
+    "# Eksik Salary olan satırları seç\n",
+    "df_missing_salary = df[df['Salary'].isnull()].copy()\n",
+    "\n",
+    "if not df_missing_salary.empty:\n",
+    "    # Tahmin için özellikleri al\n",
+    "    X_missing = df_missing_salary.drop(columns=['Salary'])\n",
+    "    # Tahmin yap\n",
+    "    predicted_salaries = model.predict(X_missing)\n",
+    "    # Tahminleri orijinal DataFrame'e yaz\n",
+    "    df.loc[df['Salary'].isnull(), 'Salary'] = predicted_salaries\n",
+    "    print(\"\\nEksik Salary değerleri başarıyla tahmin edilip DataFrame'e yazıldı.\")\n",
+    "else:\n",
+    "    print(\"\\nEksik Salary değeri bulunmamaktadır.\")\n",
+    "\n",
+    "# Artık df'nin Salary sütununda eksik değer yok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "61d737b9-99e7-4485-bc46-ea73d7803523",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[df['Salary'].isnull(), 'Salary'] = predicted_salaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "78b83d25-4ad6-4526-9e2d-529f9cd8bee8",
+   "execution_count": 185,
+   "id": "5a654120-24d7-408d-ad4a-971afec167f2",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 186,
    "id": "9e3b64f3-505f-40f1-94fd-e122e9e4ed4f",
    "metadata": {},
    "outputs": [],
